--- a/src/components/contact/index.scss
+++ b/src/components/contact/index.scss
@@ -1,5 +1,11 @@
 .contact-content{
     .container {
+        .image{
+            @media screen and (max-width: 768px) {
+                display: flex;
+                align-items: center;
+            }
+        }
         img{
             max-height: 340px;
         }
@@ -8,6 +14,9 @@
         p{
             font-size: 20px;
             font-family: UVNNhatKy_R;
+            @media screen and (max-width: 768px) {
+                font-size: 14px !important;
+            }
         }
     }
 }
