--- a/src/components/procedure/index.scss
+++ b/src/components/procedure/index.scss
@@ -4,6 +4,9 @@
     box-shadow: 1px 1px 3px 3px #88888824;
     overflow: hidden;
     height: 550px;
+    @media screen and (max-width: 639px) {
+        margin-top: 40px;
+    }
 
     img{
         width: auto;
