--- a/src/components/product/index.scss
+++ b/src/components/product/index.scss
@@ -3,6 +3,9 @@
     border-radius: 10px;
     box-shadow: 1px 1px 3px 3px #88888824;
 
+    @media screen and (max-width: 639px) {
+        margin-top: 40px;
+    }
     img{
         width: 100%;
         height: auto;
