--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -20,7 +20,7 @@
     .contact-content{
         // background-color: #FBAB7E;
         // background-image: linear-gradient(62deg, #fff 0%, #ffa724 100%);
-        padding: 40px;  
+        padding: 40px 0;  
         background-image: url(../../asset//images/contactus-background.jpg);
         background-position: center;
         background-repeat: no-repeat;
